manifests/task-mgt-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"task-mgt-back","namespace":"team-apps"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"task-mgt-back"}},"template":{"metadata":{"labels":{"app":"task-mgt-back"}},"spec":{"containers":[{"image":"sangminmattlee/task-mgt-back:latest","name":"task-mgt-back","ports":[{"containerPort":5000}]}]}}}}
  creationTimestamp: "2025-04-30T18:55:48Z"
  generation: 1
  name: task-mgt-back
  namespace: team-apps
  resourceVersion: "35798"
  uid: edeeb2d4-12be-4ce5-9c41-3ebffff62c24
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: task-mgt-back
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: task-mgt-back
    spec:
      containers:
      - image: sangminmattlee/task-mgt-back:latest
        imagePullPolicy: Always
        name: task-mgt-back
        ports:
        - containerPort: 5000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2025-04-30T18:55:48Z"
    lastUpdateTime: "2025-04-30T18:56:10Z"
    message: ReplicaSet "task-mgt-back-855d4fcd6" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2025-04-30T19:04:53Z"
    lastUpdateTime: "2025-04-30T19:04:53Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  observedGeneration: 1
  replicas: 2
  unavailableReplicas: 2
  updatedReplicas: 2
