manifests/backend-service-fix.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-backend-svc
  namespace: team-apps
spec:
  selector:
    app: k8s-backend
  ports:
  - port: 8080
    targetPort: 8081
