manifests/django-ecommerce.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-ecommerce
  namespace: team-apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-ecommerce
  template:
    metadata:
      labels:
        app: django-ecommerce
    spec:
      containers:
      - name: ecommerce
        image: emmanuelkb/django-ecommerce:v5
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: django-ecommerce-svc
  namespace: team-apps
spec:
  selector:
    app: django-ecommerce
  ports:
  - port: 8000
    targetPort: 8000
