manifests/frontend-service-fix.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-frontend-svc
  namespace: team-apps
spec:
  selector:
    app: k8s-frontend
  ports:
  - port: 3000
    targetPort: 5050
