manifests/k8s-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-backend
  namespace: team-apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-backend
  template:
    metadata:
      labels:
        app: k8s-backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/akezh/k8s-backend:v3
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-backend-svc
  namespace: team-apps
spec:
  selector:
    app: k8s-backend
  ports:
  - port: 8080
    targetPort: 8080
