manifests/k8s-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-frontend
  namespace: team-apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-frontend
  template:
    metadata:
      labels:
        app: k8s-frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/akezh/k8s-frontend:v6
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-frontend-svc
  namespace: team-apps
spec:
  selector:
    app: k8s-frontend
  ports:
  - port: 3000
    targetPort: 3000
