manifests/team-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: team-ingress
  namespace: team-apps
spec:
  ingressClassName: gce
  rules:
  - host: api.lab.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-backend-svc
            port:
              number: 8080
  - host: ui.lab.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-frontend-svc
            port:
              number: 3000
